syntax = "proto3";

package v1;

option go_package = "github.com/bungysheep/contact-management/pkg/api/v1/communicationmethod";

import "audit.proto";

message CommunicationMethod {
    string contact_system_code = 1;

    string communication_method_code = 2;

    string description = 3;

    string details = 4;

    string status = 5;

    string format_field = 6;

    v1.Audit audit = 7;
}

message DoReadCommunicationMethodRequest {
    string contact_system_code = 1;

    string communication_method_code = 2;
}

message DoReadCommunicationMethodResponse {
    CommunicationMethod communication_method = 1;
}

message DoReadAllCommunicationMethodRequest { 
    string contact_system_code = 1;
}

message DoReadAllCommunicationMethodResponse {
    repeated CommunicationMethod communication_method = 1;
}

message DoSaveCommunicationMethodRequest { 
    CommunicationMethod communication_method = 1;
}

message DoSaveCommunicationMethodResponse {
    bool result = 1;
}

message DoDeleteCommunicationMethodRequest {
    string contact_system_code = 1;

    string communication_method_code = 2;
}

message DoDeleteCommunicationMethodResponse {
    bool result = 1;
}

service CommunicationMethodService { 
    rpc DoRead (DoReadCommunicationMethodRequest) returns (DoReadCommunicationMethodResponse);

    rpc DoReadAll (DoReadAllCommunicationMethodRequest) returns (DoReadAllCommunicationMethodResponse);

    rpc DoSave (DoSaveCommunicationMethodRequest) returns (DoSaveCommunicationMethodResponse);

    rpc DoDelete (DoDeleteCommunicationMethodRequest) returns (DoDeleteCommunicationMethodResponse);
}